<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.sw2017.q_up.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:background = "#30b5ff">

    <TextView
        android:id="@+id/txtview_title"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="27dp"
        android:text="Place Details"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/buttonlike"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="76dp"
        android:layout_height="66dp"
        android:layout_gravity="left|center_vertical"
        android:drawableBottom="@drawable/like"
        android:textAllCaps="false"
        android:layout_marginLeft="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/txtview_title" />


    <Button
        android:id="@+id/buttondislike"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="76dp"
        android:layout_height="66dp"
        android:layout_gravity="left|center_vertical"
        android:drawableBottom="@drawable/dislike"
        android:textAllCaps="false"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/txtview_title" />



    <Button
        android:id="@+id/buttoninfo"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="76dp"
        android:layout_height="66dp"
        android:layout_gravity="left|center_vertical"
        android:drawableBottom="@drawable/info"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@+id/btn_chat"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_qup"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/txt_dislike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dislike"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        app:layout_constraintRight_toLeftOf="@+id/buttondislike"
        android:layout_marginRight="9dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/txtview_title" />

    <TextView
        android:id="@+id/txt_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Like"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/buttonlike"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/txtview_title" />

    <ToggleButton
        android:id="@+id/btn_qup"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginBottom="158dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:textOff="Q UP!"
        android:textOn="EXIT Q"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/txtview_title" />

    <TextView
        android:id="@+id/txtView_numberqup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_qup"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/UserNr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="nrQueue"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.356"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintTop_toBottomOf="@+id/txtview_title" />

    <TextView
        android:id="@+id/time8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="Time"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.356"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintTop_toBottomOf="@+id/txtview_title"
        app:layout_constraintLeft_toRightOf="@+id/UserNr" />

    <Button
        android:id="@+id/btn_chat"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/chat_button"
        android:text="@string/chatButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.914"
        app:layout_constraintTop_toBottomOf="@+id/UserNr" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:rating="5"
        android:isIndicator="true"
        android:focusable="false"
        android:clickable="false"
        app:layout_constraintTop_toBottomOf="@+id/txtview_title"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>